# geolite

./: BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  POSTGIS_TODO.md  README.md  TODO.md  prek.toml
.github/workflows/: ci.yml  packaging.yml  pages.yml  perf.yml
benches/: spatialite_vs_sqlitegis.rs
bindings/python/: hatch_build.py  pyproject.toml
bindings/python/scripts/: before_build.sh
docs/: limitations.md  perf-vs-spatialite.md
examples/web-demo/: Cargo.toml  Dioxus.toml  README.md  build.rs
examples/web-demo/public/: app.css
examples/web-demo/src/: components.rs  db.rs  main.rs  runner.rs  state.rs  viz.rs
examples/web-demo/worker/: Cargo.toml
geolite-core/: Cargo.toml
geolite-core/src/: error.rs  ewkb.rs  function_catalog.rs  lib.rs
geolite-core/src/functions/: accessors.rs  constructors.rs  io.rs  measurement.rs  mod.rs  operations.rs  predicates.rs
geolite-diesel/: Cargo.toml
geolite-diesel/benches/: spatial_index.rs
geolite-diesel/src/: expression_methods.rs  functions.rs  functions_template.rs  lib.rs  prelude.rs  query_patterns.rs  types.rs
geolite-diesel/tests/: diesel_test_helpers.rs  expression_methods.rs  postgres_integration.rs  predicate_bool_helpers.rs  sqlite_integration.rs  sqlite_types.rs  wasm_integration.rs
geolite-sqlite/: Cargo.toml
geolite-sqlite/src/: ffi.rs  lib.rs
geolite-sqlite/tests/: integration.rs  test_db_macro.rs  wasm.rs
geolite-sqlite/tests/support/: shared_cases.rs
geolite/src/: lib.rs
geolite/src/diesel/: types.rs
sqlitegis/: Cargo.toml
sqlitegis/benches/: spatial_index.rs
sqlitegis/src/: lib.rs
sqlitegis/src/core/: error.rs  ewkb.rs
sqlitegis/src/core/functions/: accessors.rs  constructors.rs  io.rs  measurement.rs  operations.rs  predicates.rs
sqlitegis/src/diesel/: expression_methods.rs  functions.rs  prelude.rs  query_patterns.rs  types.rs
sqlitegis/src/sqlite/: ffi.rs
sqlitegis/tests/: diesel_expression_methods.rs  diesel_postgres_integration.rs  diesel_sqlite_integration.rs  diesel_sqlite_types.rs  diesel_test_helpers.rs  diesel_wasm_integration.rs  sqlite_integration.rs  sqlite_test_db_macro.rs
sqlitegis/tests/support/: shared_cases.rs
src/: lib.rs
src/core/: error.rs  ewkb.rs  function_catalog.rs  mod.rs
src/core/functions/: operations.rs  predicates.rs
src/diesel/: functions.rs  mod.rs  query_helpers.rs  query_patterns.rs
src/sqlite/: ffi.rs  mod.rs
tests/: diesel_predicate_bool_helpers.rs  diesel_sqlite_integration.rs  sqlite_integration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
