[package]
name    = "geolite-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust PostGIS-compatible spatial functions (no SQLite dependency)"

[lib]
name = "geolite_core"

[dependencies]
# Core geometry engine
geo          = { version = "0.32", default-features = false }

# I/O and format conversion (WKT, WKB, GeoJSON, SVG)
geozero      = { version = "0.15", features = ["with-wkt", "with-geojson", "with-svg", "with-geo", "with-wkb"] }

# Error handling
thiserror    = "2"

[features]
default = []
