[package]
name         = "geolite-diesel"
version      = "0.1.0"
edition      = "2021"
rust-version.workspace = true
license      = "MIT OR Apache-2.0"
description  = "Diesel ORM integration for geolite spatial types (Geometry, Geography)"
readme       = "../README.md"
repository   = "https://github.com/LucaCappelletti94/geolite"
homepage     = "https://github.com/LucaCappelletti94/geolite"
documentation = "https://docs.rs/geolite-diesel"
keywords     = ["geospatial", "diesel", "postgis", "ewkb", "sqlite"]
categories   = ["database", "api-bindings"]
autotests    = false

[lib]
name = "geolite_diesel"

[dependencies]
geolite-core = { version = "0.1.0", path = "../geolite-core" }
geo           = { version = "0.32", default-features = false }
# Diesel base (no backend enabled) — backends are opt-in via features.
diesel = { version = "2", default-features = false }

[dev-dependencies]
geolite-core = { version = "0.1.0", path = "../geolite-core" }
geolite-sqlite = { version = "0.1.0", path = "../geolite-sqlite" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
libsqlite3-sys = { version = ">=0.17.2, <0.36.0" }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
sqlite-wasm-rs = "0.5"
wasm-bindgen-test = "0.3"

[[test]]
name = "sqlite_types"
path = "tests/sqlite_types.rs"
required-features = ["sqlite"]

[[test]]
name = "expression_methods"
path = "tests/expression_methods.rs"
required-features = ["sqlite"]

[[test]]
name = "postgres_integration"
path = "tests/postgres_integration.rs"
required-features = ["postgres"]

[[test]]
name = "sqlite_integration"
path = "tests/sqlite_integration.rs"
required-features = ["sqlite"]

[[test]]
name = "wasm_integration"
path = "tests/wasm_integration.rs"
required-features = ["sqlite"]

[features]
default = []
sqlite  = ["diesel/sqlite"]
# Enable PostgreSQL backend support (future).
postgres = ["diesel/postgres"]
