[package]
name         = "geolite-sqlite"
version      = "0.1.0"
edition      = "2021"
rust-version.workspace = true
license      = "MIT OR Apache-2.0"
description  = "SQLite loadable extension exposing geolite-core spatial functions (native + WASM)"
readme       = "../README.md"
repository   = "https://github.com/LucaCappelletti94/geolite"
homepage     = "https://github.com/LucaCappelletti94/geolite"
documentation = "https://docs.rs/geolite-sqlite"
keywords     = ["geospatial", "sqlite", "postgis", "ewkb", "wasm"]
categories   = ["database", "api-bindings"]

[lib]
name       = "geolite_sqlite"
crate-type = ["cdylib", "rlib"]

[dependencies]
geolite-core = { version = "0.1.0", path = "../geolite-core" }

# Native: libsqlite3-sys directly, same version range as diesel 2.3 (<0.36)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libsqlite3-sys = { version = ">=0.17.2, <0.36.0", features = ["bundled_bindings"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sqlite-wasm-rs = "0.5"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
libsqlite3-sys = { version = ">=0.17.2, <0.36.0", features = ["bundled_bindings"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
sqlite-wasm-rs = "0.5"
wasm-bindgen-test = "0.3"
